# optparse-generic

./: .gitignore  .travis.yml  CHANGELOG.md  Only.nix  README.md  default.nix  flake.nix  optparse-generic.cabal  release.nix  shell.nix  stack.ghc.7.8.4.yaml  stack.yaml
.github/workflows/: haskell.yml
examples/: unwrap-options.hs  unwrap-with-help.hs
src/Options/: Generic.hs
