Name: optparse-generic
Version: 1.0.1
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2016 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Optparse-Generic-Library/issues
Synopsis: Auto-generate a command-line parser for your datatype
Description: This library auto-generates an @optparse-applicative@-compatible
    @Parser@ from any data type that derives the @Generic@ interface.
    .
    See the documentation in "Options.Generic" for an example of how to use
    this library
Category: System
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Optparse-Generic-Library

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base                 >= 4.6     && < 5   ,
        system-filepath      >= 0.3.1   && < 0.5 ,
        text                               < 1.3 ,
        transformers         >= 0.2.0.0 && < 0.6 ,
        optparse-applicative >= 0.11.0  && < 0.13,
        time                 >= 1.5     && < 1.7,
        void                               < 0.8
    Exposed-Modules: Options.Generic
    GHC-Options: -Wall
