Name: optparse-generic
Version: 1.4.8
Cabal-Version: >=1.10
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2016 Gabriella Gonzalez
Author: Gabriella Gonzalez
Maintainer: Gabriel439@gmail.com
Tested-With: GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.1
Bug-Reports: https://github.com/Gabriel439/Haskell-Optparse-Generic-Library/issues
Synopsis: Auto-generate a command-line parser for your datatype
Description: This library auto-generates an @optparse-applicative@-compatible
    @Parser@ from any data type that derives the @Generic@ interface.
    .
    See the documentation in "Options.Generic" for an example of how to use
    this library
Category: System
Extra-Source-Files: CHANGELOG.md
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Optparse-Generic-Library

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base                 >= 4.7      && < 5   ,
        system-filepath      >= 0.3.1    && < 0.5 ,
        text                                < 2.1 ,
        transformers         >= 0.2.0.0  && < 0.7 ,
        transformers-compat  >= 0.3      && < 0.8 ,
        Only                                < 0.2 ,
        optparse-applicative >= 0.16.0.0 && < 0.18,
        time                 >= 1.5      && < 1.13,
        void                                < 0.8 ,
        bytestring                          < 0.12
    
    if impl(ghc < 8.0)
        Build-Depends:
            semigroups           >= 0.5.0    && < 0.20

    if impl(ghc < 7.8)
        Build-Depends:
            singletons       >= 0.10.0  && < 1.0 ,
            tagged           >= 0.8.3   && < 0.9 ,
            th-desugar                     < 1.5.1
    Exposed-Modules: Options.Generic
    GHC-Options: -Wall
    Default-Language: Haskell2010
